--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>writed vscode.dev</p>
+    <p>What's your name?</p>
+    <input type="text"><br>
+
+    <p>,and your age?</p>
+    <input type="text"><br>
 </body>
 </html>
